[Java Runtime Sandbox] Currently deny access to account data only